--- a/to.etc.domui/src/resources/themes/domui/240_labelselector.frag.css
+++ b/to.etc.domui/src/resources/themes/domui/240_labelselector.frag.css
@@ -40,6 +40,7 @@
 	height: 18px;
 	margin: 0px 0px 0px 2px;
 	padding: 0px;
+	display: inline-block;
 }
 .ui-lui-keyword-no-res {
 	display: inline-block;
